Add support for alternative assembly notation, cleanup